--- a/variables.html
+++ b/variables.html
@@ -13,6 +13,9 @@
         let x = 3;
         let y = 2;
         console.log(x+y);
+
+        const price = (20 + 40 );
+        console.log(price);
     </script>
 </body>
 </html>
